syntax = "proto3";
option go_package = "./habitpb";

import "proto/habit.proto";

message Battle {
    Habit habit_one = 1;
    Habit habit_two = 2;
    string code = 3;
    string winner = 4;
}

message BattleRequest {
    string code = 1;
    string habitID = 2;
}

message BattleResponse {
    string code = 1;
    bool ok = 2;
    string message = 3;
}

message BattleAssociationsRequest{
    string habitID = 1;
}

message BattleAssociationsResponse {
    repeated string codes = 2;
}