syntax = "proto3";

option go_package = "./habitpb";

message Habit {
    int32 streak = 1;
    int64 last_performed = 2;
    string habit_name = 3;
    string user = 4;
}

message Habits {
    map<string, Habit> habits = 1;
}
message UpdateHabitRequest {
    Habit habit = 1;
};

message UpdateHabitResponse {
    string message = 2;
};

message GetHabitRequest {
    string habitname = 1;
    string username = 2;
}

message GetHabitResponse {
    bool ok = 1;
    Habit habit = 2;
}

message ListHabitsRequest {
    string username = 2;
}

message ListHabitsResponse {
    string username = 1;
    Habits habits = 2;
}

