syntax = "proto3";
option go_package = "./habitpb";

import "proto/battle.proto";
import "proto/habit.proto";

service HabitService {
    rpc GetHabit(GetHabitRequest) returns (GetHabitResponse) {};
    rpc ListHabits(ListHabitsRequest) returns (ListHabitsResponse) {};
    rpc UpdateHabit(UpdateHabitRequest) returns (UpdateHabitResponse) {};
    rpc RegisterBattle(BattleRequest) returns (BattleResponse) {};
    rpc GetBattleAssociations(BattleAssociationsRequest) returns (BattleAssociationsResponse) {};
}
